--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "body-parser": "^1.20.0",
     "bunyan": "^1.8.15",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "deasync": "^0.1.28",
     "ethers": "^5.7.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
