--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node .",
     "start-pretty": "node . | ./node_modules/.bin/bunyan",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ISTEST=ture jest"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -26,5 +26,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.3.1",
+    "superagent": "^8.0.3",
+    "supertest": "^6.3.1"
   }
 }
